feat(site): add some const strings to i18n

--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -18,6 +18,7 @@
   "join": "Join",
   "editBackupTitle": "Edit Backup Details",
   "editBackupMessages": "To edit the messages in a backup, click the <0/> button.",
+  "messageTooLong": "Your message data is too large to be shown in the page URL. If you need to share this page, use the \"$t(share)\" button.",
   "temporaryShareUrl": "Share URL",
   "temporaryShareUrlExpires": "Share URL (expires <0>$t(timestamp.relative.days_future)</0>)",
   "expiresIn": "Expires {{0}}",
@@ -366,6 +367,7 @@
   "troubleshootMessage": "If you press the send button and nothing happens, it may be because your browser is blocking connections to Discord, which is not uncommon for privacy-focused extensions like Privacy Badger. Try disabling privacy extensions or entering incognito/private mode.",
   "setMessageLink": "Set Message Link",
   "messageLink": "Message Link",
+  "setMessageLinkNote": "What is this?<br/>You can use this menu if you're editing a message that has already been sent. To get started, right click/long press the message you want to edit, select \"Copy Message Link\", then paste the link in the box below.<br/><br/>If you want to overwrite what is currently written in Discohook: Add the webhook that sent the message, then press \"$t(overwriteMessage)\". Otherwise, just select \"$t(setMessageLink)\". The submit button at the top of the page will now allow you to edit the message.",
   "webhook": "Webhook",
   "referenceNoWebhooks": "You haven't added any webhooks that match the message link you provided. To overwrite or edit, you will need to add the correct webhook.",
   "invalidMessageLink": "Invalid message link. They start with https://discord.com/channels/… and have three sets of numbers.",
