feat(site): editor-only message names

--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -436,6 +436,7 @@
   "message": "Message",
   "messageN": "Message {{n}}",
   "messageNText": "Message {{n}} - {{text}}",
+  "messageName": "Message Name",
   "componentN": {
     "1": "Row {{n}}",
     "2": "Button {{n}}",
