feat(site): guild session management

--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -226,6 +226,21 @@
   "webhooks": "Webhooks",
   "forceRefresh": "Force Refresh",
   "refreshed": "Refreshed",
+  "sessions": "Sessions",
+  "sessionsSubtitle": "Below is a list of active sessions for <0>{{guild.name}}</0>",
+  "revokeSession": "Revoke Session",
+  "thisDevice": "This Device",
+  "owner": "Owner",
+  "permissionsCount_one": "{{count}} permission",
+  "permissionsCount_other": "{{count}} permissions",
+  "sessionPanelDescription": "Permissions cannot be altered here. Instead, modify the user's roles in Discord, then delete this session if the changes must cascade immediately. Only permissions that affect Discohook usage are shown here.",
+  "selectNone": "Select None",
+  "selectAll": "Select All",
+  "revokeCount": "Revoke {{count}}",
+  "revokeSessions_one": "Revoke {{count}} Session",
+  "revokeSessions_other": "Revoke {{count}} Sessions",
+  "revokeSessionsConfirm": "Are you sure you want to revoke these sessions? The users that are authorized via these sessions will have their permissions re-calculated when they next try to access your server through Discohook. This is generally not necessary.",
+  "revoke": "Revoke",
   "auditLog": "Audit Log",
   "auditLogSubtitle": "Below is a list of actions that have been taken through Discohook for <0>{{guild.name}}</0>. Some expected entries may not be present--for example if a webhook URL was leaked, it's not likely that the attacker would use Discohook.<br /><br />If you don't recognize a user, you may want to delete the webhook.",
   "anonymous": "Anonymous",
