fix(site): animated cdn links

--- a/packages/site/public/guide-files/changelogs/2025-11.md
+++ b/packages/site/public/guide-files/changelogs/2025-11.md
@@ -12,6 +12,7 @@ description: "Interface refreshes & teeny features"
 
 ## Fixed
 - Fixed weird dismissal behavior with nested popup menus
+- Fixed animated emojis not displaying in the preview
 
 ## Updates
 - Refreshed styling for the theme selector & message sending menus
