feat(site): better animated emoji detection
this prevents confusion when using animated emojis with only their ID since the animated flag is required to render in discord

--- a/packages/site/public/guide-files/changelogs/2025-11.md
+++ b/packages/site/public/guide-files/changelogs/2025-11.md
@@ -9,6 +9,7 @@ description: "Interface refreshes & teeny features"
 - There is now a "Sessions" tab on your server page which can be used to deauthorize malicious sessions if necessary (administrator permissions required)
 - You can now set the "voice message" flag in the message flags menu, which will make it so that any audio attachments in the message are shown as voice recordings
   - This is not supported for components-based messages because of Discord limitations.
+- Improved animated emoji detection when only an ID is provided to the custom emoji menu
 
 ## Fixed
 - Fixed weird dismissal behavior with nested popup menus
