--- a/packages/bot-rw/src/i18n/en.json
+++ b/packages/bot-rw/src/i18n/en.json
@@ -235,6 +235,40 @@
         }
       }
     },
+    "profile": {
+      "name": "profile",
+      "description": "Configure the server profile for Discohook Utils",
+      "options": {
+        "set": {
+          "name": "set",
+          "description": "Override the bot's nickname, avatar, or banner with custom values",
+          "options": {
+            "name": {
+              "name": "name",
+              "description": "The bot's nickname"
+            },
+            "avatar": {
+              "name": "avatar",
+              "description": "The bot's avatar"
+            },
+            "banner": {
+              "name": "banner",
+              "description": "The bot's banner"
+            }
+          }
+        },
+        "clear": {
+          "name": "clear",
+          "description": "Reset one or all profile values to their defaults",
+          "options": {
+            "value": {
+              "name": "value",
+              "description": "Which value to reset. If not provided, all values are cleared"
+            }
+          }
+        }
+      }
+    },
     "help": {
       "description": "Get help with various topics",
       "options": {
@@ -436,5 +470,12 @@
   "idUnavailable": "ID unavailable.",
   "customize": "Customize",
   "gteNMessagesSent_one": "At least {{count}} message sent",
-  "gteNMessagesSent_other": "At least {{count}} messages sent"
+  "gteNMessagesSent_other": "At least {{count}} messages sent",
+  "webhookDelete": {
+    "confirm": "Are you sure you want to delete this webhook? This will make it impossible to edit any messages it has sent.",
+    "forbidden": "You don't have permissions to manage webhooks.",
+    "wrongServer": "Webhook does not exist or it is not in this server.",
+    "success": "Deleted the webhook successfully.",
+    "cancel": "The webhook is safe and sound."
+  }
 }
