feat(site): embed attachment uploads

--- a/packages/site/public/i18n/de.json
+++ b/packages/site/public/i18n/de.json
@@ -259,7 +259,7 @@
     "sidebarColor": "Seitenleiste Farbe",
     "addAction": "Aktion hinzufügen",
     "provider": "Anbieter",
-    "largeImageUrl": "Großes Bild URL",
+    "largeImage": "Großes Bild",
     "file": "Datei",
     "messageFlagsNote": "Flaggen sind optionale Nachrichtenmerkmale, die aktiviert oder deaktiviert werden können.",
     "providerUrl": "Anbieter URL",
@@ -375,7 +375,7 @@
     "title": "Titel",
     "titleUrl": "Title URL",
     "images": "Bilder",
-    "thumbnailUrl": "Thumbnail URL",
+    "thumbnail": "Thumbnail",
     "galleryImageN": "Galeriebild {{n}}",
     "useLargeImages": "Große Bilder verwenden",
     "addImage": "Bild hinzufügen",
