--- a/packages/site/public/i18n/en.json
+++ b/packages/site/public/i18n/en.json
@@ -487,6 +487,7 @@
   "gifConvertSuggestion": "<icon/> Looks like this is a GIF! Would you like to <button>convert the link</button> so Discord can display it?",
   "author": "Author",
   "authorUrl": "Author URL",
+  "icon": "Icon",
   "iconUrl": "Icon URL",
   "sidebarColor": "Sidebar Color",
   "clickToSet": "Click to Set",
@@ -499,8 +500,8 @@
   "titleUrlManaged": "This is set automatically by the main embed in the gallery. Only change this if you want to change which gallery this image belongs to.",
   "redirectUrl": "Redirect URL",
   "images": "Images",
-  "largeImageUrl": "Large Image URL",
-  "thumbnailUrl": "Thumbnail URL",
+  "largeImage": "Large Image",
+  "thumbnail": "Thumbnail",
   "galleryImageN": "Gallery Image {{n}}",
   "useLargeImages": "Use large images",
   "addImage": "Add Image",
