--- a/packages/site/public/i18n/es.json
+++ b/packages/site/public/i18n/es.json
@@ -388,7 +388,7 @@
     "webhook": "Webhook",
     "componentsNoUsableWebhook": "Ninguno de tus webhooks es compatible con botones que no sean de enlace, por lo que ninguno se mostrará. Agrega un webhook perteneciente a Discohook.",
     "images": "Imágenes",
-    "largeImageUrl": "URL de la imagen grande",
+    "largeImage": "Imagen grande",
     "checkFunctionElse": "De lo contrario, si la función no pasa:",
     "import": "Importar",
     "deleteBackup": "Eliminar copia de seguridad",
@@ -424,7 +424,7 @@
     "linkEmbedsPremiumNote": "¡Has descubierto una función Deluxe! <0>Lee más sobre las incrustaciones de enlaces aquí.</0>",
     "iconUrl": "URL del icono",
     "text": "Texto",
-    "thumbnailUrl": "URL de la miniatura",
+    "thumbnail": "Miniatura",
     "galleryImageN": "Imagen de la galería {{n}}",
     "date": "Fecha",
     "role": "Rol",
