--- a/packages/site/public/i18n/it.json
+++ b/packages/site/public/i18n/it.json
@@ -368,10 +368,10 @@
     "addUrl": "Aggiungi URL",
     "deleteComponentConfirm": "Sei sicuro di voler eliminare questo $t(component.{{type}}, lowercase)?",
     "actionTypeText": "TIpo di Azione",
-    "largeImageUrl": "URL dell'Immagine Grande",
+    "largeImage": "Immagine Grande",
     "useLargeImages": "Usa immagini grandi",
     "addImage": "Aggiungi Immagine",
-    "thumbnailUrl": "URL della Copertina",
+    "thumbnail": "Copertina",
     "fields": "Sezioni",
     "addAnother": "Aggiungine un'Altra",
     "fieldN": "Sezione {{n}}",
