--- a/packages/site/public/i18n/ru.json
+++ b/packages/site/public/i18n/ru.json
@@ -546,8 +546,8 @@
     "actionTypeText": "Тип Действия",
     "body": "Тело",
     "images": "Изображения",
-    "largeImageUrl": "Ссылка на Большое Изображение",
-    "thumbnailUrl": "Ссылка на Миниатюру",
+    "largeImage": "Большое Изображение",
+    "thumbnail": "Миниатюру",
     "useLargeImages": "Использовать большие изображения",
     "addImage": "Добавить Изображение",
     "fields": "Поля",
